Add URLs in DESCRIPTION.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+URL: https://github.com/lmjl-alea/distops
+BugReports: https://github.com/lmjl-alea/distops/issues
