--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/lmjl-alea/distops
+URL: https://github.com/lmjl-alea/distops, https://lmjl-alea.github.io/distops/
 BugReports: https://github.com/lmjl-alea/distops/issues
+Imports: 
+    cli,
+    furrr,
+    progressr
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
