--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,21 @@ Description: It implements an alternative `dist()` function that integrates
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 URL: https://github.com/lmjl-alea/distops, https://lmjl-alea.github.io/distops/
 BugReports: https://github.com/lmjl-alea/distops/issues
+SystemRequirements: GNU make
 Imports: 
     cli,
-    furrr,
-    progressr
+    desc,
+    fs,
+    glue,
+    Rcpp,
+    RcppParallel,
+    usethis
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+LinkingTo: 
+    Rcpp,
+    RcppParallel
