--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,10 @@ Version: 0.1.0
 Authors@R: 
     person("Aymeric", "Stamm", , "aymeric.stamm@cnrs.fr", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-8725-3654"))
-Description: It implements an alternative `dist()` function that integrates 
-    parallelization and progress bars via the `future` framework. It also 
-    provides functions to manipulate distance matrices, such as an 
-    implementation of the subset operator which never turn the `dist` object 
-    into a full matrix.
+Description: It provides subset operator and medoid computation that are fully 
+    parallelized leveraging the 'RcppParallel' package. It also provides 
+    functions for package developers to easily implement their own parallelized 
+    'dist()' function using a custom C++-based distance function.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
